@@ -1,8 +1,13 @@
 DATE       AUTHOR      CHANGE
 ---------- ----------- --------------------------------------------------------
+2008-02-09 patrick     Allow the GIOP end point to be configured using an
+                       omniORB configuration.
+                       NEW VERSION: 1.3.5
 2008-02-09 patrick     Added the ability to make direct connections to a
                        Subject Manager servant (that is, without involving the
-                       CORBA Naming Service).
+                       CORBA Naming Service). This is achieved by using
+                       tweek::CorbaManager::initDirect() to set the GIOP end
+                       point address.
                        NEW VERSION: 1.3.4
 2007-09-04 patrick     Use new environment variable TWEEK_DATA_DIR as a way to
                        look up files in TWEEK_BASE_DIR/share/tweek.
